# Wall-E

./: .Installations.md.un~  .gitignore  .gitmodules  Installations.md  LICENSE  README.md  wall_e_install.sh  wall_e_install_mac.sh
1_led_blink/: CMakeLists.txt  README.md  Readme.md
1_led_matrix/: CMakeLists.txt  README.md
2_LSA/: .gitignore  CMakeLists.txt  README.md
3_MPU/: README.md  sdkconfig  sdkconfig.old
4_switch_controlled_motor_normal/: CMakeLists.txt  README.md  readme.md  switch_controlled_motor_normal.c
5_line_following/: CMakeLists.txt  README.md  partition_table.csv  sdkconfig.defaults
5_switch_controlled_motor_parallel/: README.md  readme.md.txt
6_PWM/: CMakeLists.txt  README.md
6_line_following/: README.md
6_self_balancing/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
7_line_following/: README.md
7_self_balancing/: sdkconfig.defaults
8_self_balancing/: .gitignore  README.md  partition_table.csv  sdkconfig  sdkconfig.old
acce_and_gyro_graphs/: CMakeLists.txt  Makefile  sdkconfig
complimentary_graph/: CMakeLists.txt  Makefile
components/tuning/: CMakeLists.txt  tuning.c
components/tuning/include/: tuning.h
esp-idf-template/: CMakeLists.txt
led_blink/: CMakeLists.txt  Makefile  sdkconfig
led_pack_flicker/: CMakeLists.txt  Makefile  sdkconfig
line_following/: CMakeLists.txt  sdkconfig.defaults
line_sensor_test/: CMakeLists.txt  Makefile  sdkconfig
lsa_test/: CMakeLists.txt
mpu_test/: CMakeLists.txt  Makefile  sdkconfig
pwm_test/: CMakeLists.txt  Makefile  sdkconfig
self_balancing/: CMakeLists.txt  (+2 more)
(+117 files in other folders)
